--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "whirlpool-archives"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+default = []
+transaction_decimals = []
+
 [dependencies]
 serde = "1.0.188"
 serde_derive = "1.0.188"
